# igraph

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  sample_api.txt  sample_config.txt
examples/: testfs.rs
lib/: igraph.rs
src/: app.rs  dependencies.rs  dependency_graph.rs  igraph.rs  lib.rs  main.rs  path_mapper.rs
src/dependencies/: canonicalize.rs  compiledb.rs  configfile.rs  cparse.rs  dot.template  error.rs  gn.rs  graph.rs  path_mapper.rs
src/igraph/: compiledb.rs  cparse.rs  error.rs  gn.rs
style/: main.scss
