[package]
name = "igraph"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[example]]
name = "testfs"

[dependencies]
tokio = { version = "1", features = ["full"]}
thiserror = "1"
tracing = { version = "0.1"}
shlex = { version = "1.3.0"}
serde = { version = "1.0.196", features = ["derive", "alloc"]}
serde_json = { version = "1.0.113", features = ["alloc"]}
regex = { version = "1.10.3", features = ["use_std"]}
clap = { version = "4.5.0", features = ["derive", "env"]}
tracing-subscriber = { version = "0.3.18", features = [
    "json",
    "matchers",
    "time",
    "tracing",
    "env-filter",
]}
glob = "0.3.1"
nom = "7.1.3"
nom-supreme = "0.8.0"
