[package]
name = "igraph"
version = "0.9.0"
edition = "2021"
authors = ["Andrei Litvin"]

[lib]
crate-type = ["cdylib", "rlib"]

[[example]]
name = "testfs"

[dependencies]
tokio = { version = "1", features = ["full"]}
thiserror = "1"
tracing = { version = "0.1"}
shlex = { version = "1.3.0"}
serde = { version = "1.0.196", features = ["derive", "alloc"]}
serde_json = { version = "1.0.113", features = ["alloc"]}
regex = { version = "1.10.3", features = ["use_std"]}
clap = { version = "4.5.0", features = ["derive", "env", "unicode" ]}
tracing-subscriber = { version = "0.3.18", features = [
    "json",
    "matchers",
    "time",
    "tracing",
    "env-filter",
]}
glob = "0.3.1"
nom = "7.1.3"
nom-supreme = "0.8.0"
uuid = { version = "1.7.0", features = ["v6", "std", "rng"] }
camino = "1.1.6"
tera = "1.19.1"
