[package]
name = "include-graph"
version = "1.0.2"
edition = "2021"
authors = ["Andrei Litvin"]
description = "Generates dot graph descriptions of c/c++ include dependencies."
repository = "https://github.com/andy31415/igraph"
readme = "README.md"
keywords = ["cli", "graph"]
license-file = "LICENSE"

[lib]
path="src/lib.rs"
crate-type = ["lib"]

[dependencies]
tokio = { version = "1", features = ["full"]}
thiserror = "1"
tracing = { version = "0.1"}
shlex = { version = "1.3.0"}
serde = { version = "1.0.196", features = ["derive", "alloc"]}
serde_json = { version = "1.0.113", features = ["alloc"]}
regex = { version = "1.10.3", features = ["use_std"]}
clap = { version = "4.5.0", features = ["derive", "env", "unicode" ]}
tracing-subscriber = { version = "0.3.18", features = [
    "json",
    "matchers",
    "time",
    "tracing",
    "env-filter",
    "regex",
]}
glob = "0.3.1"
nom = "7.1.3"
nom-supreme = "0.8.0"
uuid = { version = "1.7.0", features = ["v6", "std", "rng"] }
camino = "1.1.6"
tera = "1.19.1"
